syntax = "proto3";

package rate;

option go_package = "./rate";

message RateRequest {
  string unit = 1;
  string ip = 2;
}

message RateResponse {
  double rate = 1;
}

service ExchangeRate {
  rpc UsdRate(RateRequest) returns(RateResponse);
}
